--- a/vg.css
+++ b/vg.css
@@ -5,51 +5,89 @@
 }
 
 h1{
-  font-size: 40pt;
+  font-size: 50pt;
+}
+header{
+  height: 50px;
 }
 
 body{
   display: block;
+  background: var(--secondary);
 }
 
+button{
+  background-color: inherit;
+  border: 2px solid white;
+  border-radius: 20px;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+}
+#welcome{
+    width: 100%;
+    padding-top: 100px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+#welcome p{
+  margin-top: 20px;
+}
+.item{
+  width: 75%;
+  height: 200px;
+  padding: 140px 0;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  //border: 2px solid black;
+}
 .subheader{
-  padding-top: 100px;
-  padding-left: 150px;
-  text-align: left;
   font-size: 25pt;
-  width: 25%;
 }
+
 #daily-text{
-  background-color: var(--secondary);
-  width: 100%;
-  height: 800px;
   text-align: center;
+  justify-content: space-between;
 }
-#daily-text h1{
-  padding-top: 15%;
-
-}
-#daily-text h2{
-  margin: 50px auto;
-}
-
-#recipes{
-  width: 100%;
-  height: 800px;
-  background-color: var(--tertiary);
-}
-#foodpic{
-  float: right;
-  height: 600px;
-  width: auto;
-}
-#recipe-text{
-  width: 50%;
-  padding: 150px;
+#text{
+  width: 40%;
+  height: 100%;
+  text-align: center;
+  font-size: 20pt;
+  border: 2px solid white;
+  padding: 20px;
+  margin-left: 20px;
+  border-radius: 20px;
 }
 
-#journal{
-  width: 100%;
-  height: 800px;
-  background-color: var(--secondary);
+.text-p{
+  text-align: left;
+  width: 45%;
+  padding: 20px;
+  height: 100%;
+}
+.text-p p{
+  padding-top: 30px;
+  line-height: 15pt;
+}
+
+.button{
+  margin-top: 30px;
+  width: 40%;
+  height: 50px;
+}
+.button:hover{
+  box-shadow: 0 0 10px black;
+}
+
+
+footer{
+  padding: 25px;
+  text-align: center;
+  margin-top: 50px;
 }
